2.4.5 () -

- TW-1572 Better urgency inheritance (thanks to Jens Erat).

------ current release ---------------------------

2.4.4 (2015-05-10) df49aaba126484b668c41d3ff9301f8d8ec49987

- TW-69   wait dates relative to due date (thanks to John Florian).
- TW-1285 I'd like to use relative dates combined with times (thanks to Adam
          Gibbins).
- TW-1474 Documentation is confusing with respect to user/uuid on the server
          (thanks to Tomas Babej).
- TW-1596 taskwarrior can't compile FreeBSD 9.3 32bit environment (thanks to
          ribbon)
- TW-1603 Priority color precedence changed since it is a UDA, should be lowered
          again (thanks to Jens Erat).
- TW-1605 Japanese translation for Taskwarrior (thanks to Oota Toshiya).
- TW-1606 scheduled.any filter (thanks to Peter Rochen).
- TW-1608 The recur/recurring report shows tasks without a recur interval
          (thanks to Brad Collette).
- TW-1610 Disabling GC can lead to editing the wrong task (thanks to Scott M).
- The 'obfuscate' setting, if set to '1' will replace all text with 'xxx'.
- POSIX file locking mechanism, eliminating platform-specific code.

------ old releases ------------------------------

2.4.3 (2015-04-19) 499044b9b6bdbc95338ea585204e949d80b24a09

- TW-57   user defined attribute sort order (thanks to Max Muller).
- TW-70   urgency.user.keyword.<keyword>.coefficient=...
- TW-111  User-defined priorities.
- TW-1279 Make default.* not apply to recurring tasks.
- TW-1287 Make default.* not apply to synced tasks.
- TW-1539 user-defined urgency coefficients for priority values.
- TW-1541 Priority should be converted to UDA (in default taskrc) (thanks to
          Tomas Babej).
- TW-1556 task hangs when modifying uda field with percent-encoded (url-encoded)
          value (thanks to Stefan Frühwirth).
- TW-1578 Bash tab completion problems on first run
          (thanks to Renato Alves and Ptolemarch).
- TW-1580 "modified" attribute no longer updated (thanks to David Patrick).