@@ -449,7 +449,6 @@
 
 #define STRING_CMD_IMPORT_USAGE      "Importa ficheiros JSON"
 #define STRING_CMD_IMPORT_SUMMARY    "Importadas {1} tarefas."
-#define STRING_CMD_IMPORT_NOFILE     "Necessita especificar o ficheiro a importar."
 #define STRING_CMD_IMPORT_FILE       "A importar '{1}'"
 #define STRING_CMD_IMPORT_MISSING    "File '{1}' not found."
 #define STRING_TASK_NO_DESC          "Descrição da anotação em falta: {1}"
